fetch 5 beautiful painting from museum API and fix css to flex row wrap

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -59,7 +59,7 @@ body {
 }
 button {
   color: white;
-  font-size: 18px;
+  font-size: 20px;
   background-color: transparent;
   border: 4px solid transparent;
   cursor: pointer;
@@ -91,8 +91,8 @@ button:hover {
 
 /* FAQ */
 .titleFAQ {
-  padding: 20px 20px 0px 20px;
-  font-size: 20px;
+  padding: 20px 30px 0px 30px;
+  font-size: 22px;
 }
 .columnsFAQ {
   text-align: left;
@@ -139,6 +139,11 @@ button:hover {
 /* Game and game cards */
 .cards {
   margin-top: 20px;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
 }
 .card {
   display: flex;
@@ -146,6 +151,8 @@ button:hover {
   justify-content: center;
   align-items: center;
   gap: 10px;
+  width: 300px;
+  text-align: center;
 }
 .cardImg {
   width: 200px;
